--- a/MOM/default/dialog/IntervalManagement.ViewEdit.htm
+++ b/MOM/default/dialog/IntervalManagement.ViewEdit.htm
@@ -111,16 +111,16 @@ function isAdapterSelected(){
    <TR>
       <TD colspan=3>
         <div id="actions" class="TableCell" style="width:300px;float:right;border:solid 2px black;margin-right:13px; -moz-border-radius: 15px; border-radius: 15px;padding: 10px 5px 10px 15px;">
-          <div style='float:left; margin-right:10px;'><img src="/mom/default/localized/en-us/images/billinggroups/stats.gif"></div>
+          <div style='float:left; margin-right:10px;'><img src="/Res/Images/icons/chart_line.png"></div>
           <div style='margin-left:30px; margin-bottom:10px;'><b><a href="javascript:void(0)" OnClick="window.open('IntervalManagement.Statistics.Frame.asp?IntervalID=<MDMLABEL Name="IntervalId"></MDMLABEL>&BillingGroupId=<MDMLABEL Name="BillingGroupId"></MDMLABEL>','', 'height=700,width=1000, resizable=yes, scrollbars=yes, status=yes');">View Statistics</a></b><br>
           [TEXT_VIEW_STATISTICS_GROUP_DESCRIPTION]</div>
           
-          <div style='float:left; margin-right:10px;'><img src="/mom/default/localized/en-us/images/billinggroups/ViewHistory.gif"></div>    
+          <div style='float:left; margin-right:10px;'><img src="/Res/Images/icons/script.png"></div>    
           <div style='margin-left:30px; margin-bottom:10px;'><b><a href="javascript:void(0)" OnClick="window.open('IntervalManagement.RunHistory.List.asp?Title=' + '<MDMLABEL Name="BillingGroup"></MDMLABEL>' + ' In Interval ' + '<MDMLABEL Name="IntervalId"></MDMLABEL>' + '&BillingGroupID=<MDMLABEL Name="BillingGroupId"></MDMLABEL>&IntervalID=<MDMLABEL Name="IntervalId"></MDMLABEL>','', 'height=700,width=1000, resizable=yes, scrollbars=yes, status=yes');">View History</a></b><br>
           [TEXT_VIEW_HISTORY_DESCRIPTION]</div>
 #MDMIf SHOW_CREATE_PULL_LIST_OPTION          
           
-          <div style='float:left; margin-right:10px;'><img src="/mom/default/localized/en-us/images/billinggroups/pullList.gif"></div> 
+          <div style='float:left; margin-right:10px;'><img src="/Res/Images/icons/table_edit.png"></div> 
           <div style='margin-left:30px; margin-bottom:5px;'><b><a href="#" OnClick="window.open('BillingGroupPullList.asp?BillingGroupID=[BillingGroupID]&IntervalID=<MDMLABEL Name="IntervalId"></MDMLABEL>','', 'height=660,width=800, resizable=yes, scrollbars=yes, status=yes');">Create Pull List</a></b><br></div>
           [TEXT_CREATE_GROUP_DESCRIPTION]   
 #MDMENDIF       
