--- a/MAM/default/dialog/OwnerAccounts.htm
+++ b/MAM/default/dialog/OwnerAccounts.htm
@@ -25,7 +25,7 @@
 
 <TABLE border="0" cellpadding="1" cellspacing="0" width="100%">
  <tr>
-  <td Class='CaptionBar' nowrap>[TEXT_ACCOUNT_OWNER_IMPERSONETED_BY] [OWNER_TITLE]</td>
+  <td Class='CaptionBar' nowrap>[TEXT_OWNER_ACCOUNTS] [OWNER_TITLE]</td>
  </tr>
 </TABLE>
 
