--- a/default/dialog/Adjustment.Finder.htm
+++ b/default/dialog/Adjustment.Finder.htm
@@ -36,7 +36,7 @@
 <TABLE border=0 width="100%">
 <tr>
 <td valign=top>
-      <table border=0 width=300>
+      <table border="0" width="300px">
           <TR>
             <td><input type="radio" name="FixedPeriod" value="0" checked onClick="showInterval();"></td>
             <td><strong><LABEL Name='BillingInterval' Type='Caption'></LABEL></strong></td>
