--- a/default/dialog/DefaultDialogCreateAuditEvent.htm
+++ b/default/dialog/DefaultDialogCreateAuditEvent.htm
@@ -34,8 +34,16 @@ countfield.value = maxlimit - field.value.length;
        </tr>
         <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
         <tr>
-          <td class="captionEWRequired" style='vertical-align: top;'><MDMLABEL Name="EVENT_DETAILS" type="Caption">Details</MDMLABEL>:&nbsp;&nbsp;</td>
-          <td><TEXTAREA class="field" name="EVENT_DETAILS" rows="10" cols="100" onKeyUp="textCounter(this,document.mdm.remLen,4000);"></TEXTAREA><br><input type="text" name="remLen" value="4000" size="2" maxlength="2" style="background-color:transparent;border: 1px none;text-align: right;">  <MDMLABEL Name="EVENT_DETAILS" type="Caption">characters left for Details</MDMLABEL><br></TD>
+          <td class="captionEWRequired" style='vertical-align: top;'>
+            <MDMLABEL Name="EVENT_DETAILS" type="Caption">Details</MDMLABEL>:&nbsp;&nbsp;
+          </td>
+          <td>
+            <TEXTAREA class="field" name="EVENT_DETAILS" rows="10" cols="100" onKeyUp="textCounter(this,document.mdm.remLen,4000);"></TEXTAREA>
+            <br>
+            <input type="text" name="remLen" value="4000" size="2" maxlength="2" style="background-color:transparent;border: 1px none;text-align: right;"> 
+            <MDMLABEL Name="EVENT_DETAILS" type="Caption">Details</MDMLABEL>
+            <br>
+          </TD>
         </tr>
   	    <tr><td colspan=2></td></tr> 
       	<tr>
