--- a/default/dialog/IntervalManagement.StateChange.htm
+++ b/default/dialog/IntervalManagement.StateChange.htm
@@ -205,8 +205,8 @@ else
 <center>
 
 <!-- Buttons -->
-<button OnClick="mdm_RefreshDialog(this)" name="ok" Class="clsOkButton">OK</button>
-<button onclick="mdm_RefreshDialog(this)" name="cancel" Class="clsOkButton">Cancel</button>
+<button OnClick="mdm_RefreshDialog(this); return false;" name="ok" Class="clsOkButton">OK</button>
+<button onclick="mdm_RefreshDialog(this); return false;" name="cancel" Class="clsOkButton">Cancel</button>
 </FORM>
 </BODY>
 </HTML>
