CORE-7981 CLONE - Adapter UI Issue

--- a/MOM/default/dialog/AdapterManagement.Instance.ViewEdit.htm
+++ b/MOM/default/dialog/AdapterManagement.Instance.ViewEdit.htm
@@ -116,7 +116,7 @@ function isAdapterSelected(){
 <BR>
 <!-- Buttons -->
 <center>
-<button onclick="mdm_RefreshDialog(this)" name="refresh" Class="clsOkButton">Refresh</button>
+<button onclick="mdm_RefreshDialog(this); return false;" name="refresh" Class="clsOkButton">Refresh</button>
 <button onclick="mdm_RefreshDialog(this); return false;" name="cancel" Class="clsOkButton"><MDMLABEL Name="TEXT_CLOSE"></MDMLABEL></button>
 </FORM>
 </BODY>
