--- a/default/localized/fr-FR/WizardHelp/AddNonRecurringcharge/summary.html
+++ b/default/localized/fr-FR/WizardHelp/AddNonRecurringcharge/summary.html
@@ -1,9 +1,6 @@
       <table>
         <tr>
-          <td class="clsWizardPrompt"><b>Summary</b><br><br>
-            Here is a summary of the [TEXT_KEYTERM_NON_RECURRING_CHARGE] you are about to create.<BR><BR>
-			Click 'Finish' to create this [TEXT_KEYTERM_NON_RECURRING_CHARGE].
-          </td>
+          <td class="clsWizardPrompt"><b>Synthèse</b><br><br> Voici une synthèse des [TEXT_KEYTERM_DISCOUNT] que vous êtes sur le point de créer.<BR><BR> Cliquez sur 'Terminer' pour créer ces [TEXT_KEYTERM_NON_RECURRING_CHARGE].</td>
         </tr>
       </table>    
 
