--- a/default/localized/fr-FR/WizardHelp/CreatePO/currency.html
+++ b/default/localized/fr-FR/WizardHelp/CreatePO/currency.html
@@ -1,12 +1,12 @@
 	  <table>
         <tr>
-          <td class="clsWizardNotesTD"><b>Currency</b><br></td>
+          <td class="clsWizardNotesTD"><b>Devise</b><br></td>
         </tr>
 	      <tr>
           <td class="clsWizardNotesTD">&nbsp;</td>
         </tr>
 	      <tr>
-          <td class="clsWizardNotesTD">This is the currency that [TEXT_KEYTERM_PRODUCT_OFFERING] and all containted rates will have.</td>
+          <td class="clsWizardNotesTD">C'est la devise utilisée pour l'[TEXT_KEYTERM_PRODUCT_OFFERING] et pour tous les prix qu'elle contient.</td>
         </tr>
       </table>
 
