--- a/default/localized/fr-FR/WizardHelp/CreatePO/dates.html
+++ b/default/localized/fr-FR/WizardHelp/CreatePO/dates.html
@@ -1,6 +1,6 @@
 	  <table>
         <tr>
-          <td class="clsWizardNotesTD"><b>Effective Date</b><br></td>
+          <td class="clsWizardNotesTD"><b>Date d'entrée en vigueur</b><br></td>
         </tr>
 	      <tr>
           <td class="clsWizardNotesTD"></td>
