--- a/default/localized/fr-FR/WizardHelp/CreatePO/summary.html
+++ b/default/localized/fr-FR/WizardHelp/CreatePO/summary.html
@@ -1,9 +1,6 @@
       <table>
         <tr>
-          <td class="clsWizardPrompt"><b>Summary</b><br><br>
-            Here is a summary of the [TEXT_KEYTERM_PRODUCT_OFFERING] you are about to create.<BR><BR>
-			Click 'Finish' to create this [TEXT_KEYTERM_PRODUCT_OFFERING].
-          </td>
+          <td class="clsWizardPrompt"><b>Synthèse</b><br><br> Voici une synthèse de l'[TEXT_KEYTERM_PRODUCT_OFFERING] que vous êtes sur le point de créer.<BR><BR> Cliquez sur 'Terminer' pour créer cette [TEXT_KEYTERM_PRODUCT_OFFERING].</td>
         </tr>
       </table>    
 
