--- a/default/dialog/HierarchyMoveDate.htm
+++ b/default/dialog/HierarchyMoveDate.htm
@@ -76,7 +76,7 @@
           <img img style="cursor:pointer"  id="openCalendarStartDate" src='/mam/default/localized/en-us/images/popupcalendar.gif' LOCALIZED="True" width=16 height=16 border=0 alt=''>
           <div id="divStartDate" style="position:absolute"></div>
           <script language="javascript" type="text/javascript">
-            generateDatePicker('StartDate','[JS_DATE_FORMAT]');
+            generateDatePicker('StartDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]','[TODAY_TEXT]', '[CALENDAR_CANCEL]','[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
           </script>
         </TD>
      </tr>    
