CORE-8039 Add Brazilian-Portugese translated files to the 8.0 source code tree. Reviewer RPuzikov

--- a/MAM/default/localized/pt-BR/MetraTechAccountManagerHelp.htm
+++ b/MAM/default/localized/pt-BR/MetraTechAccountManagerHelp.htm
@@ -72,7 +72,7 @@ var gbWindows = ((gAgent.indexOf("win") != -1) || (gAgent.indexOf("16bit") != -1
 //The colordepth of the 16 color on Windows is 1. 
 if ((gbWindows) && (gbNav4) && (window.screen) && (window.screen.colorDepth <= 4))
 {
-   alert("WebHelp has detected that your display is set to 16 colors. For full WebHelp support, please set your display to use 256 or more colors.");
+   alert("O WebHelp detectou que sua tela está definida com 16 cores. Para obter suporte completo para WebHelp, defina sua tela para 256 ou mais cores.");
    nViewFrameType = 3;
 }
 
