--- a/default/dialog/IntervalManagement.htm
+++ b/default/dialog/IntervalManagement.htm
@@ -99,7 +99,7 @@
           [TEXT_TEMP_BILLING_GROUP]-->
 	  <br><br>
           <img src="/mom/default/localized/en-us/images/refresh.gif">&nbsp;    
-          <b><a href="javascript:location.reload(true)">Refresh Interval Details</a></b><br>
+          <b><a href="javascript:location.reload(true)">[TEXT_REFRESH_INTERVAL_DETAILS]</a></b><br>
         </div>
         
      </td>
