--- a/MOM/default/dialog/BillingGroups.List.htm
+++ b/MOM/default/dialog/BillingGroups.List.htm
@@ -34,7 +34,7 @@ function LoadBillingGroups()
 #MDMENDIF
 </td>  
 <td align='right'>  
-  <button OnClick="mdm_RefreshDialog(this)" name="ShowAll" Class="clsButtonBlueXLarge" ID="Button1">Toggle Hierarchy Display</button>
+  <button OnClick="mdm_RefreshDialog(this)" name="ShowAll" Class="clsButtonBlueXLarge" ID="Button1">[TEXT_TOGGLE_HIERARCHY_DISPLAY]</button>
 </td></tr>
 </table>
  
