--- a/default/dialog/PayerSetupHistory.htm
+++ b/default/dialog/PayerSetupHistory.htm
@@ -25,7 +25,7 @@
 
 <TABLE border="0" cellpadding="1" cellspacing="0" width="100%">
  <tr>
-  <td Class='CaptionBar' nowrap>Payers for [PAYER_TITLE]</td>
+  <td Class='CaptionBar' nowrap>[TEXT_ACCOUNTS_PAID_FOR_BY] [PAYER_TITLE]</td>
  </tr>
 </TABLE>
 
