CORE- 7930 fixed  CLONE - Portuguese localization of MetraCare still has some labels in English
Conflicts:
	RMP/UI/MAM/default/dialog/DefaultDialogCreateAuditEvent.htm
	RMP/UI/MAM/default/dialog/HierarchyMoveDate.asp
	RMP/UI/MAM/default/localized/pt-BR/textlookup/LocalizedConst.xml
	Source/MetraTech/UI/MetraNet/App_GlobalResources/Resource.pt-br.resx
	Source/MetraTech/UI/MetraNet/ApprovalFrameworkManagement/ShowChangesSummary.aspx.cs

--- a/MAM/default/dialog/PayerSetupHistory.htm
+++ b/MAM/default/dialog/PayerSetupHistory.htm
@@ -25,7 +25,7 @@
 
 <TABLE border="0" cellpadding="1" cellspacing="0" width="100%">
  <tr>
-  <td Class='CaptionBar' nowrap>Payers for [PAYER_TITLE]</td>
+  <td Class='CaptionBar' nowrap>[TEXT_ACCOUNTS_PAID_FOR_BY] [PAYER_TITLE]</td>
  </tr>
 </TABLE>
 
