--- a/MAM/default/dialog/OwnedAdd.htm
+++ b/MAM/default/dialog/OwnedAdd.htm
@@ -79,7 +79,7 @@
           <img style="cursor:pointer"  id="openCalendarStartDate" src='/mam/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''>
           <div id="divStartDate" style="position:absolute"></div>
           <script language="javascript" type="text/javascript">
-            generateDatePicker("StartDate", '[JS_DATE_FORMAT]');
+            generateDatePicker('StartDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]', '[TODAY_TEXT]', '[CALENDAR_CANCEL]', '[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
           </script>
         </TD>
      </TR>       
@@ -90,7 +90,7 @@
           <img style="cursor:pointer"  id="openCalendarEndDate" src='/mam/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''>
           <div id="divEndDate" style="position:absolute"></div>
           <script language="javascript" type="text/javascript">
-            generateDatePicker("EndDate", '[JS_DATE_FORMAT]');
+            generateDatePicker('EndDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]', '[TODAY_TEXT]', '[CALENDAR_CANCEL]', '[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
           </script>
         </TD>    
      </TR>
