--- a/default/dialog/OwnedUpdate.htm
+++ b/default/dialog/OwnedUpdate.htm
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/Res/Ext/resources/css/ext-all.css" /> 
    <script type="text/javascript" src="/Res/Ext/adapter/ext/ext-base.js"></script>
    <script type="text/javascript" src="/Res/Ext/ext-all.js"></script> 
-      <script type="text/javascript" src="js/DatePicker.js"></script>
+      <script type="text/javascript" src="/Res/JavaScript/DatePicker.js"></script>
  </HEAD>
 
 <BODY onDrag="fOnDrag();" onDragEnd="fOnDragEnd();" onDragLeave="fOnDragLeave();" onDragEnter="fOnDragEnter();" onDragStart="fOnDragStart();" onDragOver="fOnDragOver();" onDrop="fOnDrop();">
