--- a/default/dialog/ProductOffering.Edit.htm
+++ b/default/dialog/ProductOffering.Edit.htm
@@ -45,38 +45,38 @@
 </tr>
 <tr>
 	<td class="captionEW"><MDMLABEL Name="TEXT_PRODUCT_OFFERING_EFFECTIVEDATE_STARTDATE" Type="Caption">Effective Start Date</MDMLABEL>:&nbsp;&nbsp;</td>
-  <td><INPUT type="text" class="fieldRequired" size="20" id="EffDate__StartDate" name="EffDate__StartDate">
-          <img style="cursor:pointer"  id="openCalendarEffDate__StartDate" src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''>
-          <div id="divEffDate__StartDate" style="position:absolute"></div>
+  <td><INPUT type="text" class="fieldRequired" size="20" id="EffDate_StartDate" name="EffDate_StartDate">
+          <img style="cursor:pointer"  id="openCalendarEffDate_StartDate" src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''>
+          <div id="divEffDate_StartDate" style="position:absolute"></div>
           <script language="javascript" type="text/javascript">
-            generateDatePicker('EffDate__StartDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]', '[TODAY_TEXT]', '[CALENDAR_CANCEL]', '[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
+            generateDatePicker('EffDate_StartDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]', '[TODAY_TEXT]', '[CALENDAR_CANCEL]', '[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
           </script> </td>   
 </tr>
 <tr>
 	<td class="captionEW"><MDMLABEL Name="TEXT_PRODUCT_OFFERING_EFFECTIVEDATE_ENDDATE" Type="Caption">Effective End Date</MDMLABEL>:&nbsp;&nbsp;</td>
-    <td><input name="EffDate__EndDate" class="field" type="text" size="20" id="EffDate__EndDate">          <div id="divEffDate__EndDate" style="position:absolute"></div>
-          <img style="cursor:pointer"  id="openCalendarEffDate__EndDate" src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''>
+    <td><input name="EffDate_EndDate" class="field" type="text" size="20" id="EffDate_EndDate">          <div id="divEffDate_EndDate" style="position:absolute"></div>
+          <img style="cursor:pointer"  id="openCalendarEffDate_EndDate" src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''>
           <script language="javascript" type="text/javascript">
-            generateDatePicker('EffDate__EndDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]', '[TODAY_TEXT]', '[CALENDAR_CANCEL]', '[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
+            generateDatePicker('EffDate_EndDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]', '[TODAY_TEXT]', '[CALENDAR_CANCEL]', '[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
           </script> </td>   
 </tr>
 <tr>
 	<td class="captionEW"><MDMLABEL Name="TEXT_PRODUCT_OFFERING_AVAILABILITYDATE_STARTDATE" Type="Caption">Available Start Date</MDMLABEL>:&nbsp;&nbsp;</td>
-  <td><input name="AvDate__StartDate" id="AvDate__StartDate" class="field" type="text">         
-          <img style="cursor:pointer"  id="openCalendarAvDate__StartDate" src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''>
-   <div id="divAvDate__StartDate" style="position:absolute"></div>
+  <td><input name="AvDate_StartDate" id="AvDate_StartDate" class="field" type="text">         
+          <img style="cursor:pointer"  id="openCalendarAvDate_StartDate" src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''>
+   <div id="divAvDate_StartDate" style="position:absolute"></div>
           <script language="javascript" type="text/javascript">
-            generateDatePicker('AvDate__StartDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]', '[TODAY_TEXT]', '[CALENDAR_CANCEL]', '[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
+            generateDatePicker('AvDate_StartDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]', '[TODAY_TEXT]', '[CALENDAR_CANCEL]', '[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
           </script> </td>   
 
 </tr>
 <tr>
 	<td class="captionEW"><MDMLABEL Name="TEXT_PRODUCT_OFFERING_AVAILABILITYDATE_ENDDATE" Type="Caption">Available End Date</MDMLABEL>:&nbsp;&nbsp;</td>
-  <td><input name="AvDate__EndDate" id="AvDate__EndDate" class="field" type="text">   
-          <img style="cursor:pointer"  id="openCalendarAvDate__EndDate" src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''>
-  <div id="divAvDate__EndDate" style="position:absolute"></div>
+  <td><input name="AvDate_EndDate" id="AvDate_EndDate" class="field" type="text">   
+          <img style="cursor:pointer"  id="openCalendarAvDate_EndDate" src='/mcm/default/localized/en-us/images/popupcalendar.gif' width=16 height=16 border=0 alt=''>
+  <div id="divAvDate_EndDate" style="position:absolute"></div>
           <script language="javascript" type="text/javascript">
-            generateDatePicker('AvDate__EndDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]', '[TODAY_TEXT]', '[CALENDAR_CANCEL]', '[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
+            generateDatePicker('AvDate_EndDate', '[JS_DATE_FORMAT]', '[MONTH_NAMES]', '[DAY_NAMES]', '[START_DAY_OF_WEEK]', '[TODAY_TEXT]', '[CALENDAR_CANCEL]', '[NEXT_MONTH_TEXT]', '[PREV_MONTH_TEXT]');
           </script> </td>   
 
 
