--- a/MAM/default/dialog/Adjustment.Finder.htm
+++ b/MAM/default/dialog/Adjustment.Finder.htm
@@ -4,6 +4,7 @@
   <link rel="stylesheet" type="text/css" href="/Res/Ext/resources/css/ext-all.css" /> 
   <script type="text/javascript" src="/Res/Ext/adapter/ext/ext-base.js"></script>
   <script type="text/javascript" src="/Res/Ext/ext-all.js"></script> 
+   <link rel="stylesheet" type="text/css" href="/Res/Ext/resources/css/xtheme-metranet.css" /> 
   <script language="javascript">
     var is_chrome = navigator.userAgent.toLowerCase().indexOf('chrome') > -1;
     if (is_chrome) {
