--- a/MAM/default/dialog/PayerAdd.htm
+++ b/MAM/default/dialog/PayerAdd.htm
@@ -3,8 +3,9 @@
   <LINK Localized='TRUE' rel="STYLESHEET" type="text/css" href="/mam/default/localized/en-us/styles/styles.css">  
   <link rel="stylesheet" type="text/css" href="/Res/Ext/resources/css/ext-all.css" /> 
    <script type="text/javascript" src="/Res/Ext/adapter/ext/ext-base.js"></script>
-   <script type="text/javascript" src="/Res/Ext/ext-all.js"></script> 
-   <script type="text/javascript" src="/Res/JavaScript/DatePicker.js"></script>
+  <script type="text/javascript" src="/Res/Ext/ext-all.js"></script> 
+  <link rel="stylesheet" type="text/css" href="/Res/Ext/resources/css/xtheme-metranet.css" /> 
+  <script type="text/javascript" src="/Res/JavaScript/DatePicker.js"></script>
   
   <!-- Drag & Drop Functions -->
   <script language="Javascript" src="js/dragdrop.js"></script> 
